--- a/address.html
+++ b/address.html
@@ -170,27 +170,27 @@
                         <ul>
                             <li><a href="user.html">个人资料</a></li>
                             <li><a href="user.html">修改密码</a></li>
-                            <li class="active"><a href="user.html">管理收货地址</a></li>
+                            <li class="active"><a href="address.html">管理收货地址</a></li>
                             <li><a href="user.html">消息中心</a></li>
                         </ul>
                     </li>
                     <li>
                         <h3><a href="order.html">订单中心</a></h3>
                         <ul>
-                            <li><a href="address.html">全部订单</a></li>
-                            <li><a href="address.html">已完成</a></li>
-                            <li><a href="address.html">待付款</a></li>
-                            <li><a href="address.html">待收货</a></li>
+                            <li><a href="order.html">全部订单</a></li>
+                            <li><a href="order.html">已完成</a></li>
+                            <li><a href="order.html">待付款</a></li>
+                            <li><a href="order.html">待收货</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <div class="main">
                 <div class="add_button">
-                    <button>新增收货地址</button>
+                    <a href="#add_addr">新增收货地址</a>
                     <span>您已创建<span>2</span>个收货地址，最多可创建20个</span>
                 </div>
-                <div class="add_addr">
+                <div class="add_addr" id="add_addr">
                     <h3>添加收货地址</h3>
                     <form>
                         <div>
@@ -254,7 +254,7 @@
                     <span class="default">设为默认</span>
                 </div>
                 <div class="add_button">
-                    <button>新增收货地址</button>
+                    <a href="#add_addr">新增收货地址</a>
                     <span>您已创建<span>2</span>个收货地址，最多可创建20个</span>
                 </div>
 
