--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/public.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/public.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.min.css">
     <title>首页</title>
 </head>
 
@@ -181,7 +181,7 @@
             <h3><a href="shop_list.html">最新商品</a></h3>
             <ul>
                 <li>
-                    <a href="pro_details.html"><img src="images/ad1.png" alt=""></a>
+                    <a href="pro_details.html"><img src="images/ad_new.png" alt=""></a>
                 </li>
                 <li>
                     <a href="pro_details.html"><img src="images/pro3.png" alt=""></a>
@@ -269,7 +269,7 @@
             <h3><a href="shop_list.html">热门商品</a></h3>
             <ul>
                 <li>
-                    <a href="pro_details.html"><img src="images/ad2.png" alt=""></a>
+                    <a href="pro_details.html"><img src="images/ad_hot.png" alt=""></a>
                 </li>
                 <li>
                     <a href="pro_details.html"><img src="images/pro3.png" alt=""></a>
@@ -357,7 +357,7 @@
             <h3><a href="shop_list.html">推荐商品</a></h3>
             <ul>
                 <li>
-                    <a href="pro_details.html"><img src="images/ad3.png" alt=""></a>
+                    <a href="pro_details.html"><img src="images/ad_t.png" alt=""></a>
                 </li>
                 <li>
                     <a href="pro_details.html"><img src="images/pro3.png" alt=""></a>
@@ -445,7 +445,7 @@
             <h3><a href="shop_list.html">爆款推荐</a></h3>
             <ul>
                 <li>
-                    <a href="pro_details.html"><img src="images/ad4.png" alt=""></a>
+                    <a href="pro_details.html"><img src="images/ad_b.png" alt=""></a>
                 </li>
                 <li>
                     <a href="pro_details.html"><img src="images/pro3.png" alt=""></a>
