--- a/order.html
+++ b/order.html
@@ -170,17 +170,17 @@
                         <ul>
                             <li><a href="user.html">个人资料</a></li>
                             <li><a href="user.html">修改密码</a></li>
-                            <li><a href="user.html">管理收货地址</a></li>
+                            <li><a href="address.html">管理收货地址</a></li>
                             <li><a href="user.html">消息中心</a></li>
                         </ul>
                     </li>
                     <li>
                         <h3 class="active"><a href="order.html">订单中心</a></h3>
                         <ul>
-                            <li><a href="address.html">全部订单</a></li>
-                            <li><a href="address.html">已完成</a></li>
-                            <li><a href="address.html">待付款</a></li>
-                            <li><a href="address.html">待收货</a></li>
+                            <li><a href="order.html">全部订单</a></li>
+                            <li><a href="order.html">已完成</a></li>
+                            <li><a href="order.html">待付款</a></li>
+                            <li><a href="order.html">待收货</a></li>
                         </ul>
                     </li>
                 </ul>
