--- a/pro_details.html
+++ b/pro_details.html
@@ -215,7 +215,7 @@
                         </span>
                     </div>
                     <div class="shopping">
-                        <a href="#">立即购买</a>
+                        <a href="confirm_order.html">立即购买</a>
                         <a href="javascript:void(0)" class="shoppingcart">加入购物车</a>
                         <a href="javascript:void(0)" class="add_love"><img src="images/love_icon.png" alt="">加入收藏</a>
                     </div>
@@ -665,13 +665,13 @@
                 <h3>猜你喜欢</h3>
                 <ul>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro4.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro4.png" alt=""></a><span>￥299.00</span></li>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro5.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro5.png" alt=""></a><span>￥299.00</span></li>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
                 </ul>
             </div>
         </div>
