--- a/shop_list.html
+++ b/shop_list.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="height_op">
                             <h5>高级选项：</h5>
-                            <ul>
+                            <ul class="type">
                                 <li>容量</li>
                                 <li>适用人数</li>
                                 <li>加热方式</li>
@@ -278,6 +278,83 @@
                                 <li>操作方式</li>
                                 <li>功能</li>
                             </ul>
+                            <div class="type_list">
+                                <ul>
+                                    <li>容量1</li>
+                                    <li>容量2</li>
+                                    <li>容量3</li>
+                                    <li>容量4</li>
+                                    <li>容量5</li>
+                                    <li>容量6</li>
+                                    <li>容量7</li>
+                                    <li>容量9</li>
+                                    <li>容量10</li>
+                                </ul>
+                                <ul>
+                                    <li>1人</li>
+                                    <li>2人</li>
+                                    <li>3人</li>
+                                    <li>4人</li>
+                                    <li>5人</li>
+                                    <li>6人</li>
+                                    <li>7人</li>
+                                    <li>8人</li>
+                                    <li>9人</li>
+                                </ul>
+                                <ul>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                    <li>加热方式</li>
+                                </ul>
+                                <ul>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                    <li>内胆材质</li>
+                                </ul>
+                                <ul>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                    <li>类别</li>
+                                </ul>
+                                <ul>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                    <li>操作方式</li>
+                                </ul>
+                                <ul>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                    <li>功能</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
