--- a/user.html
+++ b/user.html
@@ -167,9 +167,9 @@
                     <li>
                         <h3><a href="user.html">账户信息</a></h3>
                         <ul>
-                            <li><a href="user.html">个人资料</a></li>
+                            <li class="active"><a href="user.html">个人资料</a></li>
                             <li><a href="user.html">修改密码</a></li>
-                            <li><a href="user.html">管理收货地址</a></li>
+                            <li><a href="address.html">管理收货地址</a></li>
                             <li><a href="user.html">消息中心</a></li>
                         </ul>
                     </li>
@@ -196,7 +196,7 @@
                         <p>帐户余额：<span>￥0</span> 帐户状态：<span>正常</span></p>
                         <div>
                             <a href="javascript:void(0)" class="edit_info"><img src="images/edit_icon.png" alt="">修改个人资料</a>
-                            <a href="javascript:void(0)" class="edit_addr"><img src="images/addr_icon.png" alt="">收货地址管理</a>
+                            <a href="address.html" class="edit_addr"><img src="images/addr_icon.png" alt="">收货地址管理</a>
                             <a href="javascript:void(0)" class="verify_email"><img src="images/email_icon.png" alt="">未验证邮箱</a>
                             <a href="javascript:void(0)" class="verify_phone"><img src="images/phone_icon.png" alt="">未验证手机</a>
                         </div>
@@ -330,6 +330,7 @@
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/public.js"></script>
+    <script src="js/user.js"></script>
 </body>
 
 </html>
