登陆注册验证

--- a/login.html
+++ b/login.html
@@ -66,37 +66,39 @@
                 <div class="loginname">
                     <label for="loginname"><img src="images/user_icon.png" alt=""></label>
                     <input type="text" id="loginname" name="loginname" value="手机号/邮箱">
+                    <em class="aw"></em>
                 </div>
                 <div class="pwd">
                     <label for="pwd"><img src="images/pwd_icon.png" alt=""></label>
                     <input type="text" id="pwd" name="pwd" value="密码">
+                    <em class="aw"></em>
                 </div>
                 <div class="yicon">
-                    <input type="text" name="yicon" value="验证码">
-                    <span class="yimg"><img src="images/yzm1.png" alt="bcsm">
+                    <input type="text" name="yicon" value="验证码" id="yicon">
+                    <span class="yimg "><img src="images/yzm1.png " alt="bcsm ">
                     </span>
-                    <span>
-                    看不清，换一张</span>
+                    <span>看不清，换一张</span>
+                    <em class="aw"></em>
                 </div>
-                <input type="submit" value="登录" id="login">
+                <input type="submit" value="登录 " id="login">
             </form>
             <p>其他方式登录</p>
-            <div class="other">
+            <div class="other ">
                 <ul>
                     <li>
-                        <a href="#"><img src="images/qq_icon.png"></a>
+                        <a href="# "><img src="images/qq_icon.png "></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/wx_icon.png"></a>
+                        <a href="# "><img src="images/wx_icon.png "></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/zfb_icon.png"></a>
+                        <a href="# "><img src="images/zfb_icon.png "></a>
                     </li>
                 </ul>
             </div>
             <p>
-                <a href="register.html">注册文的账号</a> |
-                <a href="#">忘记密码</a>
+                <a href="register.html ">注册文的账号</a> |
+                <a href="# ">忘记密码</a>
             </p>
         </div>
     </div>
@@ -176,9 +178,10 @@
             </p>
         </div>
     </div>
-    <script src="js/jquery-1.7.1.min.js"></script>
-    <script src="js/public.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/jquery-1.7.1.min.js "></script>
+    <script src="js/md5.min.js "></script>
+    <script src="js/public.js "></script>
+    <script src="js/login.js "></script>
 </body>
 
 </html>
