--- a/register.html
+++ b/register.html
@@ -63,30 +63,35 @@
                 <div>
                     <label for="username">会员名：</label>
                     <input type="text" id="username" name="username" value="">
+                    <em class="aw_text">不能为空</em>
                 </div>
                 <div>
                     <label for="phone">手机：</label>
                     <input type="text" id="phone" name="phone" value="">
+                    <em class="aw_text"></em>
                 </div>
                 <div>
                     <label for="email">邮箱：</label>
                     <input type="text" id="email" name="email" value="">
+                    <em class="aw_text"></em>
                 </div>
                 <div>
                     <label for="pwd">密码：</label>
                     <input type="password" id="pwd" name="pwd" value="">
+                    <em class="aw_text"></em>
                 </div>
                 <div>
                     <label for="repwd">确认密码：</label>
                     <input type="password" id="repwd" name="repwd" value="">
+                    <em class="aw_text"></em>
                 </div>
                 <div class="yicon">
                     <label for="yicon">验证码：</label>
                     <input type="text" name="yicon" id="yicon" value="验证码">
                     <span class="yimg"><img src="images/yzm1.png" alt="bcsm">
                     </span>
-                    <span>
-                    看不清，换一张</span>
+                    <span>看不清，换一张</span>
+                    <em class="aw_text"></em>
                 </div>
                 <div class="userdeal">
                     <span></span>
@@ -178,6 +183,7 @@
         </div>
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/md5.min.js"></script>
     <script src="js/public.js"></script>
     <script src="js/register.js"></script>
 </body>
