--- a/comment.html
+++ b/comment.html
@@ -185,7 +185,7 @@
                     <span>1057573</span>
                     <span>1</span>
                     <span>2017-02-15</span>
-                    <span><a href="comment.html">发表评价</a></span>
+                    <span><a href="#edit_com">发表评价</a></span>
                 </li>
             </ul>
             <div class="summary">
@@ -207,7 +207,7 @@
                     <li>还可以吧(362)</li>
                 </ul>
             </div>
-            <div class="edit_com">
+            <div id="edit_com" class="edit_com">
                 <form>
                     <div class="grading">
                         <label><span>*</span>评分：</label>
