--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="nav">
             <div class="containe">
                 <div class="menu">
-                    <h2>所有产品分类 <img src="images/arrows_icon2.png" alt=""></h2>
+                    <h2 class="active">所有产品分类 <img src="images/arrows_icon.png" alt=""></h2>
                     <ul class="submenu">
                         <li>
                             <h3>厨房小电</h3>
