--- a/order.html
+++ b/order.html
@@ -187,11 +187,11 @@
             </div>
             <div class="main">
                 <ul class="order_nav">
-                    <li class="active">全部订单</li>
-                    <li>待收货</li>
-                    <li>待付款</li>
-                    <li>待评价</li>
-                    <li>已完成</li>
+                    <li class="active"><a href="order.html">全部订单</a></li>
+                    <li><a href="javascript:void(0)">待收货</a></li>
+                    <li><a href="javascript:void(0)">待付款</a></li>
+                    <li><a href="javascript:void(0)">待评价</a></li>
+                    <li><a href="javascript:void(0)">已完成</a></li>
                 </ul>
                 <div class="order_search">
                     <input type="text" value="商品名称/订单号/商品编码">
@@ -240,11 +240,11 @@
                             <div class="detail">
                                 <span class="status">已完成</span>
                                 <a href="order_details.html" class="order_detail">订单详情</a>
-                                <a href="javascript:void(0)" class="ad">查看物流</a>
+                                <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
                                 <a href="javascript:void(0)" class="com">追加评价</a>
-                                <a href="pro_details.html" class="buy">再次购买</a>
+                                <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
                     </li>
@@ -277,11 +277,11 @@
                             <div class="detail">
                                 <span class="status">已完成</span>
                                 <a href="order_details.html" class="order_detail">订单详情</a>
-                                <a href="javascript:void(0)" class="ad">查看物流</a>
+                                <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
                                 <a href="javascript:void(0)" class="com">追加评价</a>
-                                <a href="pro_details.html" class="buy">再次购买</a>
+                                <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
                     </li>
@@ -314,11 +314,11 @@
                             <div class="detail">
                                 <span class="status">已完成</span>
                                 <a href="order_details.html" class="order_detail">订单详情</a>
-                                <a href="javascript:void(0)" class="ad">查看物流</a>
+                                <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
                                 <a href="javascript:void(0)" class="com">追加评价</a>
-                                <a href="pro_details.html" class="buy">再次购买</a>
+                                <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
                     </li>
@@ -351,11 +351,11 @@
                             <div class="detail">
                                 <span class="status">已完成</span>
                                 <a href="order_details.html" class="order_detail">订单详情</a>
-                                <a href="javascript:void(0)" class="ad">查看物流</a>
+                                <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
                                 <a href="javascript:void(0)" class="com">追加评价</a>
-                                <a href="pro_details.html" class="buy">再次购买</a>
+                                <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
                     </li>
@@ -388,11 +388,11 @@
                             <div class="detail">
                                 <span class="status">已完成</span>
                                 <a href="order_details.html" class="order_detail">订单详情</a>
-                                <a href="javascript:void(0)" class="ad">查看物流</a>
+                                <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
                                 <a href="javascript:void(0)" class="com">追加评价</a>
-                                <a href="pro_details.html" class="buy">再次购买</a>
+                                <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
                     </li>
