--- a/pay.html
+++ b/pay.html
@@ -246,11 +246,11 @@
                     <div>
                         <div class="pwd">
                             <input type="password" maxlength="1" id="pay_pwd">
-                            <input type="password" maxlength="1">
-                            <input type="password" maxlength="1">
-                            <input type="password" maxlength="1">
-                            <input type="password" maxlength="1">
-                            <input type="password" maxlength="1">
+                            <input type="password" maxlength="1" readonly>
+                            <input type="password" maxlength="1" readonly>
+                            <input type="password" maxlength="1" readonly>
+                            <input type="password" maxlength="1" readonly>
+                            <input type="password" maxlength="1" readonly>
                         </div>
                         <a href="javascript:void(0)">忘记支付密码？</a>
                     </div>
