--- a/pro_details.html
+++ b/pro_details.html
@@ -249,10 +249,10 @@
                         <form>
                             <label for="keyword">关键字：</label>
                             <input type="text" id="keyword" />
-                            <label for="begin">价&nbsp;&nbsp;&nbsp;格：</label>
-                            <input type="text" id="begin" />
-                            <label for="end">到</label>
-                            <input type="text" id="end" />
+                            <label for="min">价&nbsp;&nbsp;&nbsp;格：</label>
+                            <input type="text" id="min" />
+                            <label for="max">到</label>
+                            <input type="text" id="max" />
                             <a href="#">搜索</a>
                         </form>
                     </div>
