--- a/shop_cart.html
+++ b/shop_cart.html
@@ -212,13 +212,13 @@
                 <h3>猜你喜欢</h3>
                 <ul>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro4.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro4.png" alt=""></a><span>￥299.00</span></li>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro5.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro5.png" alt=""></a><span>￥299.00</span></li>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
                     <li>
-                        <a href="shop_list.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
+                        <a href="pro_details.html"><img src="images/pro8.png" alt=""></a><span>￥299.00</span></li>
                 </ul>
             </div>
         </div>
