--- a/shop_list.html
+++ b/shop_list.html
@@ -261,9 +261,9 @@
                                 <li>7000-39999</li>
                             </ul>
                             <div class="price_range">
-                                <input id="priceMin" title='最低价' maxlength='6' onkeyup="this.value=this.value.replace(/[^0-9]/g,'');" />
+                                <input id="priceMin" title='最低价' maxlength='6' />
                                 <em> - </em>
-                                <input id="priceMax" title='最高价' maxlength='8' onkeyup="this.value=this.value.replace(/[^0-9]/g,'');" />
+                                <input id="priceMax" title='最高价' maxlength='8' />
                                 <button id="priceBtn">确定</button>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -396,7 +396,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -412,7 +412,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -428,7 +428,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -445,7 +445,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -461,7 +461,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -477,7 +477,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -493,7 +493,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -510,7 +510,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -526,7 +526,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -542,7 +542,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -558,7 +558,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -574,7 +574,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -590,7 +590,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -606,7 +606,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
@@ -622,7 +622,7 @@
                             </a>
                         </div>
                         <div class="handle">
-                            <a href="pro_details.html">立即购买</a>
+                            <a href="confirm_order.html">立即购买</a>
                             <a href="javascript:void(0)" class="addshopcart">加入购物车</a>
                         </div>
                     </li>
