--- a/pro_details.html
+++ b/pro_details.html
@@ -269,19 +269,19 @@
                         <h3>店内热销</h3>
                         <ul>
                             <li>
-                                <a href="shop_list.html"><img src="images/pro4.png" alt=""></a>
+                                <a href="pro_details.html"><img src="images/pro4.png" alt=""></a>
                                 <p><em>1</em>热销17689件<span>￥299.00</span></p>
                             </li>
                             <li>
-                                <a href="shop_list.html"><img src="images/pro5.png" alt=""></a>
+                                <a href="pro_details.html"><img src="images/pro5.png" alt=""></a>
                                 <p><em>2</em>热销17689件<span>￥299.00</span></p>
                             </li>
                             <li>
-                                <a href="shop_list.html"><img src="images/pro8.png" alt=""></a>
+                                <a href="pro_details.html"><img src="images/pro8.png" alt=""></a>
                                 <p><em>3</em>热销17689件<span>￥299.00</span></p>
                             </li>
                             <li>
-                                <a href="shop_list.html"><img src="images/pro8.png" alt=""></a>
+                                <a href="pro_details.html"><img src="images/pro8.png" alt=""></a>
                                 <p><em>4</em>热销17689件<span>￥299.00</span></p>
                             </li>
                         </ul>
